# cargo-ebpf-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  TASKLOG.md  docker-compose.bpftrace.yml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/ebpf-tracker-dataset/: Cargo.toml  README.md
crates/ebpf-tracker-dataset/src/: analysis.rs  lib.rs  main.rs
crates/ebpf-tracker-events/: Cargo.toml  README.md
crates/ebpf-tracker-events/src/: lib.rs
crates/ebpf-tracker-otel/: README.md
crates/ebpf-tracker-otel/src/: lib.rs
crates/ebpf-tracker-perf/: Cargo.toml  README.md
crates/ebpf-tracker-perf/src/: lib.rs
crates/ebpf-tracker-viewer/: Cargo.toml  README.md
crates/ebpf-tracker-viewer/assets/: live-trace-matrix.js
crates/ebpf-tracker-viewer/src/: lib.rs  main.rs
docs/: cli.md  trace-payment-engine.md
examples/: README.md
examples/postcard-generator-node/: README.md  ebpf-demo.toml
examples/postcard-generator-node/src/: generate.js
examples/postcard-generator-node/templates/: postcard.html.tpl
examples/postcard-generator-rust/: README.md  ebpf-demo.toml
examples/postcard-generator-rust/src/: main.rs
examples/session-io-demo/: README.md  ebpf-demo.toml
scripts/: dashboard-smoke.sh  docker-cleanup.sh  exec-target-from-env.rs  release-check.sh  runtime-smoke.sh
src/: attach.rs  compose.rs  dashboard.rs  intelligence.rs  lib.rs  main.rs  runtime.rs
