[package]
name = "ebpf-tracker-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dashboard and replay viewer extension for ebpf-tracker JSONL streams."
repository.workspace = true
homepage.workspace = true

[lib]
name = "ebpf_tracker_viewer"
path = "src/lib.rs"

[[bin]]
name = "ebpf-tracker-viewer"
path = "src/main.rs"
